--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700|Work+Sans:300,400,500,600,700" rel="stylesheet">
 </head>
 <body>
 
@@ -33,6 +34,22 @@
     <p class="chapo">À deux pas de la Gare et à la frontière de Moulins, Clapet est une librairie de quartier, généraliste, dans laquelle vous trouverez des ouvrages jeunesse, BD, littérature, jeux/jouets et loisirs créatifs. Tenue par deux amies, elle se revendique librairie enthousiaste et familiale !</p>
 
     <hr class="separator">
+
+    <h2 class="index-title">Conseils de lecture</h2>
+    <div class="honey-pot-list">
+      <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
+        <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-1.png" alt="cover-1"></div>
+        <p class="honey-pot__title">Les grandes marées</p>
+        <p class="honey-pot__subtitle">De Jim Lynch</p></a></div>
+        <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
+          <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-2.png" alt="cover-2"></div>
+          <p class="honey-pot__title">Les grandes marées</p>
+          <p class="honey-pot__subtitle">De Joachim Schnerf</p></a></div>
+          <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
+            <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-3.png" alt="cover-3"></div>
+            <p class="honey-pot__title">Les grandes marées</p>
+            <p class="honey-pot__subtitle">De Cyril Pedrosa</p></a></div>
+          </div>
 
     <h2 class="index-title">Notre actualité</h2>
 
@@ -81,21 +98,7 @@
 
     <hr class="separator">
 
-    <h2 class="index-title">Conseils de lecture</h2>
-    <div class="honey-pot-list">
-      <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
-        <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-1.png" alt="cover-1"></div>
-        <p class="honey-pot__title">Les grandes marées</p>
-        <p class="honey-pot__subtitle">De Jim Lynch</p></a></div>
-        <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
-          <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-2.png" alt="cover-2"></div>
-          <p class="honey-pot__title">Les grandes marées</p>
-          <p class="honey-pot__subtitle">De Joachim Schnerf</p></a></div>
-          <div class="honey-pot"><a class="honey-pot__link link-block" href="./conseils-de-lecture.html">
-            <div class="honey-pot__thumbnail"><img class="honey-pot__image" src="./img/cover-3.png" alt="cover-3"></div>
-            <p class="honey-pot__title">Les grandes marées</p>
-            <p class="honey-pot__subtitle">De Cyril Pedrosa</p></a></div>
-          </div>
+   
 
           <script src="./js/main.js"></script>
         </body>
