--- a/notre-actualite.html
+++ b/notre-actualite.html
@@ -27,7 +27,7 @@
         <p class="header__subtitle">Actualité et rencontres</p>
       </a>
     </div>
-
+<div class="container page-index">
     <div class="news news-list__news">
         <a class="news__link link-block tiff" href="./notre-actualite.html">
           <div class="news__thumbnail"><img class="news__image" src="./img/news__thumbnail-2.png" alt=""></div>
@@ -73,6 +73,7 @@
           </a>
         </div>
         
-      </div>   
+      </div> 
+ </div>  
   </body>
 </html>
